// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RapmPlayerDiagView RapmPlayerDiagView - should create snapshot 1`] = `
<span>
  <b>
    RAPM diagnostics for [
    Wiggins, Aaron
    ]:
  </b>
   adj_off=[
  <b>
    2.57
  </b>
  ], adj_def=[
  <b>
    -4.94
  </b>
  ] =
  <ul>
    <li>
      Raw RAPM contribution: off=[
      <b>
        2.59
      </b>
      ], def=[
      <b>
        -4.48
      </b>
      ], total=[
      <b>
        7.06
      </b>
      ]
    </li>
    <li>
       + Priors' contribution: off=[
      <b>
        -0.02
      </b>
      ], def=[
      <b>
        -0.47
      </b>
      ], total=[
      <b>
        0.45
      </b>
      ]
    </li>
    <ul>
      <li>
        We calculate the total team prior (off=[
        <b>
          -0.15
        </b>
        ] def=[
        <b>
          -2.07
        </b>
        ]) from the delta between total adjusted efficiency and RAPM, due to the regression factor: eg compare 
        <em>
          observed
        </em>
         (off=[
        <b>
          10.00
        </b>
        ] def=[
        <b>
          -20.00
        </b>
        ]) vs 
        <em>
          derived solely from RAPM
        </em>
         (off=[
        <b>
          10.15
        </b>
        ] def=[
        <b>
          -17.93
        </b>
        ]).
      </li>
      <li>
        Then we calculate a player's contribution to the team prior - currently this is a multiple of "Adj Rtg+" ("adjusted production above D1 average"; off=[
        <b>
          4.00
        </b>
        ] def=[
        <b>
          -4.00
        </b>
        ]),
        <li>
          chosen so that a minutes-weighted average of the ratings sums to the team prior: off=[
          <b>
            -0.02
          </b>
          ], def=[
          <b>
            -0.47
          </b>
          ]
          <ul>
            <li>
              <em>
                 (eg incorporating the % on floor [
                <b>
                  82
                  %
                </b>
                ] (of [
                <b>
                  101
                </b>
                ] poss, this is an off=[
                <b>
                  -0.02
                </b>
                ] def=[
                <b>
                  -0.38
                </b>
                ] "slice" of the team prior of off=[
                <b>
                  -0.15
                </b>
                ] def=[
                <b>
                  -2.07
                </b>
                ])
              </em>
            </li>
          </ul>
        </li>
      </li>
    </ul>
  </ul>
  (
  <b>
    More player diagnostics to come...
  </b>
  )
  <br />
  (
  <a
    href="#"
    onClick={[Function]}
  >
    Scroll to global RAPM diagnostics
  </a>
  )
</span>
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 1`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
    "Player, Other",
    "Data, Dummy",
  ],
  "defLineupPoss": 944,
  "numLineups": 5,
  "numPlayers": 8,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Data, Dummy": 7,
    "Morsell, Darryl": 3,
    "Player, Other": 6,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "includeStrong": Object {},
    "playersStrong": Array [
      Object {},
      Object {},
      Object {},
      Object {},
      Object {},
      Object {},
      Object {},
      Object {},
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -4.5,
        "off_adj_ppp": 4.5,
      },
      Object {
        "def_adj_ppp": -5,
        "off_adj_ppp": 5,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
    ],
  },
  "removalPct": 0,
  "removedPlayers": Object {},
  "unbiasWeight": 0,
}
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 2`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
  ],
  "defLineupPoss": 794,
  "numLineups": 3,
  "numPlayers": 6,
  "offLineupPoss": 809,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Morsell, Darryl": 3,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "includeStrong": Object {},
    "playersStrong": Array [
      Object {},
      Object {},
      Object {},
      Object {},
      Object {},
      Object {},
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -4.5,
        "off_adj_ppp": 4.5,
      },
      Object {
        "def_adj_ppp": -5,
        "off_adj_ppp": 5,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
    ],
  },
  "removalPct": 0.2,
  "removedPlayers": Object {
    "Data, Dummy": Array [
      0.05254860746190226,
      0.05254860746190226,
    ],
    "Player, Other": Array [
      0.1576458223857068,
      0.1576458223857068,
    ],
  },
  "unbiasWeight": 0,
}
`;
